attempt to fix bad colors on mobile with light mode number who's still counting?

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 html{
   height: 100%;
   width: 100%;
+  color-scheme: light;
 }
 
 a {
